# t5gemma2-vllm-plugin

./: README.md  pyproject.toml
src/t5gemma2_vllm_plugin/: __init__.py  config.py  merged_cross_attention.py  processing.py  t5gemma2_encoder.py  t5gemma2_model.py  vllm_adapter.py
src/t5gemma2_vllm_plugin/kernels/: __init__.py  flash_t5gemma2_attention.py
