[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "t5gemma2-vllm-plugin"
version = "0.1.0"
description = "Standalone vLLM plugin for serving Google T5Gemma 2 and T5Gemma 2 DFlash speculators"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
  {name = "dflash_t5 contributors"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "torch",
  "transformers>=4.40",
  "vllm",
]

[project.entry-points."vllm.general_plugins"]
t5gemma2_vllm_plugin = "t5gemma2_vllm_plugin:register"

[tool.setuptools.packages.find]
where = ["src"]
include = ["t5gemma2_vllm_plugin*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
